# ws_berezka

./: .gitignore  Dockerfile  main.py  pyproject.toml
src/: commands.py  config.py  credentials.py  notifications.py  oauth2.py
